[package]
name = "toolinst"
version = "0.1.1"
authors = ["Jesús Blanco"]
license = "GPL-3.0"
description = "CLI written in Rust to handle installers and programs."
readme = "README.md"
homepage = "https://github.com/MikaYxCoding/toolinst"
repository = "https://github.com/MikaYxCoding/toolinst"
keywords = ["cli", "tools", "manager", "cli-tools", "installer"]
categories = ["command-line-utilities"]

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.5"
zip-extract = "0.1.2"
